--- a/root/css/style.css
+++ b/root/css/style.css
@@ -2,7 +2,8 @@ body {
 	/*background-color: #8585ad;*/
 	background-color: #333;  
    	color: #999;
-   	font: 12px/1.4em 'IM Fell Double Pica SC', serif;
+   	font: 12px/1.4em 'Open Sans', sans-serif;
+   	/*font: 12px/1.4em 'IM Fell Double Pica SC', serif;*/
 }
 
 #body-text {
@@ -21,6 +22,8 @@ body {
 #header {
    background-color: #666;
    color: #FFF;
+   z-index: 1;
+   position: relative;
 }
 
 #navWrap {
@@ -114,3 +117,71 @@ body {
 		font-size: 2rem;
 	}
 }
+
+
+#wrapper {
+	width: 90%;
+	max-width: 1100px;
+	min-width: 800px;
+	margin: 50px auto;
+	z-index: 0;
+}
+
+.pin {
+	display: inline-block;
+	background: #FEFEFE;
+	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
+	margin: 0 2px 15px;
+	-webkit-column-break-inside: avoid;
+	-moz-column-break-inside: avoid;
+	column-break-inside: avoid;
+	padding: 15px;
+	padding-bottom: 5px;
+	background-color: #999;
+	opacity: .8;
+	
+	-webkit-transition: all .2s ease;
+	-moz-transition: all .2s ease;
+	-o-transition: all .2s ease;
+	transition: all .2s ease;
+}
+
+.pin img {
+	width: 100%;
+	border-bottom: 1px solid #ccc;
+	padding-bottom: 15px;
+	margin-bottom: 5px;
+}
+
+.pin p {
+	font: 12px/18px Arial, sans-serif;
+	color: #333;
+	margin: 7px;
+}
+
+@media (min-width: 960px) {
+	#columns {
+		-webkit-column-count: 4;
+		-moz-column-count: 4;
+		column-count: 4;
+	}
+}
+
+@media (min-width: 1100px) {
+	#columns {
+		-webkit-column-count: 5;
+		-moz-column-count: 5;
+		column-count: 5;
+	}
+}
+
+#player-profile-header {
+	margin-top: 40px;
+	text-align: center;
+}
+
+.prof-sep {
+	width: 75%;
+}
+
+
