--- a/root/css/style.css
+++ b/root/css/style.css
@@ -1,5 +1,14 @@
-/* From http://bl.ocks.org/mbostock/1705868*/
 
+/* custom styles */
+.section-title {
+	text-align: center;
+}
+
+.map-player-select {
+	margin-bottom: 10px;
+}
+
+/* From http://bl.ocks.org/mbostock/1705868*/
 circle {
 	stroke: #fff;
 	stroke-width: 3px;
