--- a/root/css/style.css
+++ b/root/css/style.css
@@ -17,6 +17,12 @@ circle {
 	stroke: #fff;
 	stroke-width: 3px;
 }
+
+circle.heatmap {
+	stroke: none;
+	stroke-width: 0px;
+}
+
 path {
 	fill: none;
 	stroke: #000;
