--- a/root/css/radar-chart.css
+++ b/root/css/radar-chart.css
@@ -9,19 +9,20 @@
 }
 .radar-chart .axis .legend {
     font-family: sans-serif;
-    font-size: 10px;
+    font-size: 12px;
+    fill: white;
 }
 .radar-chart .axis .legend.top {
     dy:1em;
 }
 .radar-chart .axis .legend.left {
-    text-anchor: start;
+    text-anchor: end; /* modified rcho */
 }
 .radar-chart .axis .legend.middle {
     text-anchor: middle;
 }
 .radar-chart .axis .legend.right {
-    text-anchor: end;
+    text-anchor: start; /* rcho modified */
 }
 
 .radar-chart .tooltip {
