--- a/root/css/style.css
+++ b/root/css/style.css
@@ -326,8 +326,13 @@ select {
     cursor:pointer;
 }
 #summoner_name,
-#summoner_name_heatmap,{
-
+#summoner_name_heatmap,
+#test_1,
+#test_2,
+#test_3{
+	padding: 12px 8px;
+	width: 125px;
+	margin: 0px 1px;
 }
 
 #role_selected,
@@ -338,9 +343,9 @@ select {
 	font-size: 14px;
 	height: 36px;
 	overflow: hidden;
-	width: 100px;
+	width: 60px;
 	margin-left: 2px;
-	margin-right: 32px;
+	margin-right: 10px;
 }
 
 #btnRenderMapTimeAll,
@@ -348,6 +353,6 @@ select {
 #btnRenderRadar,
 #btnRenderHeatmapTimeAll,
 #btnRenderHeatmapTimeRegion{
-	padding: 14px 20px;
+	padding: 14px 22px;
 	margin: 10px 3px;
 }
